# py_dw_etl_dbt_core

./: .user.yml  README.md  profiles.yml  pyproject.toml
src/: extract_load.py
